--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -433,7 +433,9 @@ display: none;
 /* MEDIA QUERIES */
 
 @media (max-width: 680px) {
-
+	html, body {
+		overflow-x: hidden;
+	}
 
 
 	.intro-content,
@@ -505,7 +507,7 @@ display: none;
 	}
 
 	.intro-text-content h2 {
-		font-size: 4rem;
+		font-size: 3rem;
 	
 	}
 	
@@ -520,6 +522,7 @@ display: none;
 	
 	
 	}
+
 	
 
 }
