--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -103,7 +103,16 @@ tfoot td,
 table th {
 	background: var(--gray-light-color);
 }
+.logo {
+	position: absolute;
+	padding: 0;
+	margin: 0;
+	top: -1.5rem;
+	width: 10rem;
+	
+	
 
+}
 /* STRUCT */
 .main-bg {
 	background-image: url('../img/main-bullseye.svg');
@@ -435,6 +444,17 @@ display: none;
 @media (max-width: 680px) {
 	html, body {
 		overflow-x: hidden;
+	}
+	.logo {
+		position: absolute;
+		padding: 0;
+		margin: 0;
+		top: -1.5rem;
+		left: 2rem;
+		width: 10rem;
+		
+		
+	
 	}
 
 
